--- a/d1_sdk/CMakeLists.txt
+++ b/d1_sdk/CMakeLists.txt
@@ -11,3 +11,4 @@ add_executable(multiple_joint_angle_control src/multiple_joint_angle_control.cpp
 add_executable(joint_enable_control src/joint_enable_control.cpp src/msg/ArmString_.cpp)
 add_executable(arm_zero_control src/arm_zero_control.cpp src/msg/ArmString_.cpp)
 add_executable(get_arm_joint_angle src/get_arm_joint_angle.cpp src/msg/ArmString_.cpp src/msg/PubServoInfo_.cpp)
+add_executable(generic_control src/generic_control.cpp src/msg/ArmString_.cpp src/msg/PubServoInfo_.cpp)
